# vecko.me

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  README.md  config.yaml  config.yml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  index.xml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  robots.txt  sitemap.xml  svelte.config.js  tailwind.config.js
.github/workflows/: ci.yml  gh-pages.yml
about/: index.html
animations/: index.html  index.xml
animations/001bezier/: index.html
archetypes/: animations.md  default.md  posts.md
archetypes/posts/: default.md
blog/: index.html
categories/: index.html  index.xml
categories/project/: index.html  index.xml
categories/projects/: index.html  index.xml
content/animations/: 001bezier.md
content/posts/: 001_my-first-post.md  002_best-of-happycowgifs.md  003_sudoku-solver.md  004_learn-morse-code.md  005_presidential-pdf.md  Python copy 2.md  Python copy.md  Python.md  R.md  _index.html  mypost copy 2.md  mypost copy 4.md  mypost copy.md  mypost.md  placeholder.md  post copy 2.md  post.md  testpost.md  ytpost.md
css/: global.css  global.css.map  index.css  post-single.css  post-single.css.map  posts.css
data/: tag_colourmap.json
data/colourmaps/: categories.json  (+3 more)
docs/: about.md  index.md
layouts/: 404.html  index.html
posts/: index.html  index.xml
scss/: _custom.scss  global.scss  post-single.scss
series/: index.html  index.xml
src/: app.css  app.html
stylesheets/: extra.css
tags/: index.html  index.xml
(+84 files in other folders)
